Nuevo reporte generado por IA

--- a/Reporte_Fractional_Class_NOVIEMBRE.html
+++ b/Reporte_Fractional_Class_NOVIEMBRE.html
@@ -60,9 +60,9 @@
         <div class="card chart-container"><div style="margin-bottom: 10px; font-size: 14px; font-weight: 600;">Actividad vs Resultados</div><div class="chart-wrapper"><canvas id="barChart"></canvas></div></div>
         <div class="card insights-card">
             <div class="insights-header"><div class="ai-icon">🤖</div><h3 class="insights-title">Análisis Estratégico de IA</h3></div>
-            <div class="insights-body">En el análisis del desempeño del Agente IA durante este mes, se generaron un total de 184 leads, de los cuales 22 fueron calificados, demostrando un buen nivel de filtrado y enfoque en prospectos de calidad. Este selectivo proceso asegura que los recursos se destinan eficientemente a oportunidades con mayor probabilidad de conversión, optimizando el funnel de ventas y mejorando el retorno de inversión.
+            <div class="insights-body">Durante este mes, el Agente IA ha generado un total de 184 leads, de los cuales 22 han sido calificados, demostrando una efectiva segmentación y enfoque en oportunidades de alta calidad. Este desempeño ha permitido canalizar recursos hacia prospectos con mayor potencial, optimizando el proceso comercial y mejorando la eficiencia general del equipo.
 
-Destaca especialmente el ahorro logrado, que asciende a $1,194.79 USD, equivalente a 231.2 horas hombre. Este beneficio económico y de tiempo reafirma el valor estratégico del Agente IA, al permitir reorientar esfuerzos humanos hacia actividades de mayor impacto y complejidad. Celebramos este avance significativo que refuerza nuestra eficiencia operativa y competitividad en el mercado.</div>
+El impacto más destacado radica en el ahorro significativo alcanzado: $1,194.79 USD y 231.2 horas hombre. Este resultado refleja no solo una reducción tangible en costos operativos, sino también una liberación valiosa de tiempo que puede reinvertirse en actividades estratégicas, potenciando la productividad y el crecimiento del negocio. Sin duda, el Agente IA se consolida como una herramienta clave para maximizar recursos y acelerar resultados.</div>
         </div>
     </div>
     <script>
